--- a/components/Blog/PositionLine/positionline.module.scss
+++ b/components/Blog/PositionLine/positionline.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   padding-block: 10px;
   padding-inline: 20px;
-  border-bottom: 1px solid $chartBorder;
+  border-bottom: 1px solid $primaryBorder;
 
   @media screen and (max-width: $lg) {
     padding-block: 5px;
