--- a/pages/blog/Blog.module.scss
+++ b/pages/blog/Blog.module.scss
@@ -70,7 +70,7 @@
   flex-direction: column;
   flex: 0.3;
   padding-left: 20px;
-  border-left: 1px solid $neutralColor;
+  border-left: 1px solid $secondaryBorder;
 
   @media screen and (max-width: $lg) {
     border-left: none;
@@ -98,9 +98,9 @@
 .searchInput {
   padding-left: 5px;
   margin-bottom: 20px;
-  border: 1px solid $neutralColor;
+  border: 1px solid $secondaryBorder;
   border-radius: 4px;
-  background-color: $inputBackground;
+  background-color: $bodyBackground;
 }
 
 .tags {
